--- a/_posts/myprojects/android/2014-09-29-疑難雜誌(解決跳脫字元問題).md
+++ b/_posts/myprojects/android/2014-09-29-疑難雜誌(解決跳脫字元問題).md
@@ -1,7 +1,7 @@
 ---
 layout: post
 category : Android 
-tagline: "Q&A"
+tagline: "解決資源檔中跳脫字元問題（Error:Apostrophe not preceded by）"
 tags : [Android Develop,App,Android,Q&A,跳脫字元,資源檔]
 title: "Android疑難雜症"
 
