--- a/_posts/myprojects/android/2014-09-29-網路上人家已經寫好的技術文章.md
+++ b/_posts/myprojects/android/2014-09-29-網路上人家已經寫好的技術文章.md
@@ -12,7 +12,8 @@ title: "Android開發教學"
 
 
 - [Android Tutorial 第一堂（3）開始設計 Android 應用程式][1]
-[備份位置][2]說明以下
+[備份位置][2]，說明以下
+
 - 建立專案過程的設定檔內容
 	- 建立專案過程產生的目錄
 	- 執行專案過程(選擇模擬器)
