--- a/_posts/life/2014-11-13-kp at.md
+++ b/_posts/life/2014-11-13-kp at.md
@@ -1,3 +1,11 @@
+---
+layout: post
+category : life 
+tagline: “廣播節目”
+tags : [Music,Radio]
+title: “柯P於蘭萱時間錄音筆記”
+
+---
 蘭萱：對於80萬票的目標和目前的選情評估？若說沒把握會不會太謙虛？
 柯P：沒出院之前都不要說過關，那是姚立民在內部的討論。對手6個攻勢還是不能小看。每個都影響1%加起來還是很多。對方資源很多，可以組織動員全部開動。但選舉就是這樣，Do out best，信念就是『心存善念、盡力而為』。
 
