--- a/_posts/myprojects/crack/2014-11-21-hack astah 6.9.md
+++ b/_posts/myprojects/crack/2014-11-21-hack astah 6.9.md
@@ -28,3 +28,6 @@ http://www.eclipse.org/aspectj/
 
 5.執行完，理論上就會得到一個jar檔，改一下名字，就可以用了！(原本啟動的時候會提示只剩下一個月)
 ![image](https://farm8.staticflickr.com/7472/15842764625_abed53e7e8_o.png)
+
+
+本篇文章只供學術研究參考  請支持正版工具
