--- a/_posts/myprojects/azure/2015-01-06-azure git.md
+++ b/_posts/myprojects/azure/2015-01-06-azure git.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 category : Azure 
-tagline: "Azure DevOps"
+tagline: "Azure DevOps : Git Client"
 tags : [Azure,Devops]
 title: "Visual Studio Online Git Client"
 
