--- a/_posts/myprojects/azure/2015-01-06-azure git.md
+++ b/_posts/myprojects/azure/2015-01-06-azure git.md
@@ -22,3 +22,7 @@ title: "Visual Studio Online Git Client"
 2. 設定如下，其實也沒設定什麼。其實只是把VSO的Git位置貼上去而已。重點還是在前面幾步。  
   ![image](https://farm9.staticflickr.com/8647/16211857692_488e888909_o.png)
 3. 接下來你就放個檔案在本地目錄下，接下來commit/publish就跟喝水一樣自然  了。![image](https://farm8.staticflickr.com/7485/16025163078_3c310e56c1_o.png)
+
+
+P.S.後記：因為Github的Client預設會連線到github server，若輸入的時候不小心輸入錯了會被記錄在key chain造成後續登入失敗。這時請到您的KeyChain中刪除即可。
+![image](https://farm8.staticflickr.com/7494/16252609796_bd8bb95191_o.png)
