--- a/_posts/opensource-km/software/2015-03-20-ulysses2.md
+++ b/_posts/opensource-km/software/2015-03-20-ulysses2.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 category : Software 
-tagline: “Ulysses 2.0”
+tagline: "Ulysses 2.0"
 tags : [軟體,software,Ulysses 2.0]
 title: 新版Ulysses2.0 發表（Markdown編輯軟體）
-imagefeature: [https://farm4.staticflickr.com/3930/15475792571\_4e82311fc0\_o.jpg](https://farm9.staticflickr.com/8714/16665447317_5ece224043_h.jpg)
+imagefeature: https://farm9.staticflickr.com/8714/16665447317_5ece224043_h.jpg
 covereffect: slice
 
 ---
