--- a/_posts/opensource-km/software/2015-03-20-ulysses2.md
+++ b/_posts/opensource-km/software/2015-03-20-ulysses2.md
@@ -3,12 +3,13 @@ layout: post
 category : Software 
 tagline: "Ulysses 2.0"
 tags : [軟體,software,Ulysses 2.0]
-title: 新版Ulysses2.0 發表（Markdown編輯軟體）
+title: "新版Ulysses2.0 發表（Markdown編輯軟體）"
 imagefeature: https://farm9.staticflickr.com/8714/16665447317_5ece224043_h.jpg
 covereffect: slice
 
 ---
-aaabbb
+
+### 新版發佈囉！
 舊版的Ulysses 的版面把提示符號是獨立一列顯示，新版則變成浮動視窗(但都可以隱藏)  
 ![image](https://farm9.staticflickr.com/8695/16686600199_6f8d271a3b_o.png)
 
