--- a/_posts/opensource-km/software/2015-03-20-ulysses2.md
+++ b/_posts/opensource-km/software/2015-03-20-ulysses2.md
@@ -4,7 +4,7 @@ category : Software
 tagline: "Ulysses 2.0"
 tags : [軟體,software,Ulysses 2.0]
 title: "新版Ulysses2.0 發表（Markdown編輯軟體）"
-imagefeature: https://farm9.staticflickr.com/8714/16665447317_5ece224043_h.jpg
+imagefeature: https://farm9.staticflickr.com/8714/16665447317\_5ece224043\_h.jpg
 covereffect: slice
 
 ---
@@ -27,3 +27,6 @@ covereffect: slice
 
 也可以即時預覽，看你要哪一種輸出。舊版的需要手動更新，且格式也沒這麼多。
 ![](https://farm9.staticflickr.com/8585/16685548000_9c65e77174_o.png)
+
+### 感想
+若你要長時間輸入，要發揮打字的效率，且又有爽感，就敗這套軟體吧，絕對不會後悔。若是你只是寫短篇，像我在寫Jekyll支援的md檔，前置調整也要花不少時間。若每篇的字數可以伍佰以上，那就用這套！不然其實用mou就好了！也比較乾淨。
