--- a/_posts/myprojects/azure/2015-01-06-azure git.md
+++ b/_posts/myprojects/azure/2015-01-06-azure git.md
@@ -26,3 +26,6 @@ title: "Visual Studio Online Git Client"
 
 P.S.後記：因為Github的Client預設會連線到github server，若輸入的時候不小心輸入錯了會被記錄在key chain造成後續登入失敗。這時請到您的KeyChain中刪除即可。
 ![image](https://farm8.staticflickr.com/7494/16252609796_bd8bb95191_o.png)
+
+或是搜尋一下可以看到你的keychain，如下，然後進行修改(會問你密碼)
+![image](https://farm8.staticflickr.com/7645/16362363494_c5efb2a2b4_o.png)
