--- a/_posts/myprojects/azure/2015-01-06-azure git.md
+++ b/_posts/myprojects/azure/2015-01-06-azure git.md
@@ -29,3 +29,11 @@ P.S.後記：因為Github的Client預設會連線到github server，若輸入的
 
 或是搜尋一下可以看到你的keychain，如下，然後進行修改(會問你密碼)
 ![image](https://farm8.staticflickr.com/7645/16362363494_c5efb2a2b4_o.png)
+
+
+### 過濾器
+若是用vs online 會在目錄中產生一個檔案叫做.gitignore，你可以進行過濾不要上傳的檔案，測試過合法且有效的如下：
+
+*.dll  
+bin/  
+obj/  
