--- a/_posts/myprojects/crack/2015-06-04-hack imoc.md
+++ b/_posts/myprojects/crack/2015-06-04-hack imoc.md
@@ -3,18 +3,17 @@
 https://uc.cht.com.tw/cwa/MainCommandHandler.ashx
 
 body如下：
-
-POST https://uc.cht.com.tw/cwa/MainCommandHandler.ashx HTTP/1.1Host: uc.cht.com.twProxy-Connection: keep-aliveAccept-Encoding: gzipContent-Length: 248Connection: keep-aliveCWA-Ticket: xxxxxxxxUser-Agent: iMOC 1.8.1 (iPhone; iPhone OS 8.3; zh_TW)<cwaRequests xmlns="http://schemas.microsoft.com/2006/09/rtc/cwa" sid="11352"><search rid="555"><firstName></firstName><lastName></lastName><displayName>gfeng</displayName><emailAlias>gfeng</emailAlias><function>or</function></search></cwaRequests>
+{%gist dearsherlock/a1ae55118973f1b2b4bc%}
 回傳的結果不需要太在意，因為需要另外一個request去拿。
 ### 取結果
 下面比較重要的是AckId，他是照順序的，會累增，不能亂跳
-GET https://uc.cht.com.tw/cwa/asyncdatachannel.ashx?Sid=11352&AckID=97&UA=true HTTP/1.1Host: uc.cht.com.twProxy-Connection: keep-aliveAccept-Encoding: gzipUser-Agent: iMOC 1.8.1 (iPhone; iPhone OS 8.3; zh_TW)CWA-Ticket: xxxxxConnection: keep-alive回傳結果，可以看到requestsucceeded中的eid標籤，下次就是用那個來取。
-HTTP/1.1 200 OKConnection: Keep-AliveContent-Length: 862Expires: -1Date: Thu, 04 Jun 2015 12:32:46 GMTContent-Type: text/xml; charset=utf-8Server: Microsoft-IIS/6.0X-Powered-By: ASP.NETX-AspNet-Version: 2.0.50727Cache-Control: no-cachePragma: no-cache<cwaEvents pollWaitTime="3000" ackId="100" sid="11352">  <searchResult eid="98" rid="555" returned="1" moreAvailable="False">    <user uri="sip:sherlock@cht.com.tw" displayName="蔡政倫" title="工程師" office="資訊通信處/三科" phone="02-23266663" homePhone="" cellPhone="0928612548" otherPhone="" company="企業客戶分公司" city="" state="" country="" email="sherlock@cht.com.tw"  />  </searchResult>  <requestSucceeded eid="99" rid="555" />  <searchResult eid="100" rid="555" returned="1" moreAvailable="False">    <user uri="sip:gfeng@cht.com.tw" displayName="劉進豐" title="研究員" office="客服資訊研究所/計畫二/分項一" phone="02-23261162" homePhone="" cellPhone="0910928250" otherPhone="" company="中華電信研究院" city="" state="" country="" email="gfeng@cht.com.tw"  />  </searchResult></cwaEvents>若不知道ackid要塞多少，就先同時呼叫查詢和取得，會很快就取回ackid
+{%gist dearsherlock/7dafb822578ec1d5ea7e%}回傳結果，可以看到requestsucceeded中的eid標籤，下次就是用那個來取。
+{%gist dearsherlock/50af37977824d2018bfc%}若不知道ackid要塞多少，就先同時呼叫查詢和取得，會很快就取回ackid
 
 如下：
 https://uc.cht.com.tw/cwa/MainCommandHandler.ashx以及https://uc.cht.com.tw/cwa/asyncdatachannel.ashx?Sid=11371&AckID=56&UA=true
 第二個網址回傳的ackid＋1就可以拿來下次用。
 但要注意的是這些session id應該都是有期限的，過期的話再呼叫一次https://uc.cht.com.tw/cwa/MainCommandHandler.ashx
 內容塞以下
-<cwaRequests xmlns="http://schemas.microsoft.com/2006/09/rtc/cwa"><initiateSession rid="1"><securityMode>private</securityMode><signInData>PHNg0K</signInData></initiateSession></cwaRequests>
-就可以取回session id<cwaResponses requestProcessed="0">  <requestAccepted rid="1">    <sid>11378</sid>    <uri>sip:she@cht.com.tw</uri>    <PollWaitTime>3000</PollWaitTime>  </requestAccepted></cwaResponses>
+{%gist dearsherlock/def3367b0a1006f77ba0%}
+就可以取回session id{%gist dearsherlock/e7152a527e7e13f72cd5%}
