--- a/_posts/myprojects/mongo/2015-06-05-mongodb.md
+++ b/_posts/myprojects/mongo/2015-06-05-mongodb.md
@@ -22,6 +22,7 @@ title: "MongoDB 一日遊"
 
 接下來就是把MongoDB 啟動，預設會開在port 27017
 
+
 接下來開始寫。這版的api跟有些範例不大一樣，但我是這樣才能run哩
 
 #### 先建立dao物件
@@ -36,6 +37,10 @@ title: "MongoDB 一日遊"
 
 #### 查詢
 {%gist dearsherlock/7a00aad8dc39de91a07b%}
+
+#### Mongodb管理
+可以用這套軟體，MongoVue，但是要$，可以試用，你可以從這裡看出mongodb的結構性，跟rmdb其實是有些不一樣。
+![image](https://farm1.staticflickr.com/319/18318317160_233a1de548_o.png)
 
 ### 效能測試
 使用環境是PD10@MBPR, i7 4cpu＋8g ram
