--- a/_posts/myprojects/azure/2015-01-06-azure git.md
+++ b/_posts/myprojects/azure/2015-01-06-azure git.md
@@ -9,10 +9,17 @@ title: "Visual Studio Online Git Client"
 
 ###環境
 
-1.先到以下位置下載git程式，本篇會以command line來進行  
-2.另外需要到你的Visual Studio Online專案的UserProfile去設定另外一組帳號和密碼。  
+1.先到以下位置下載git程式，本篇不會以command line來進行  
+2.另外需要到你的Visual Studio Online專案的UserProfile去設定另外一組帳號和密碼，避免帳號透過github流出後讓您的微軟帳號陷於危險。  
+
+![image](https://farm1.staticflickr.com/338/19665371748_df70621339_o.png)
+
 3. 另外專案設定也要設定user的權限如下：  
  ![image](https://farm8.staticflickr.com/7555/15592787673_6a9587187b_o.png)
+
+4.若很不幸，身為管理員你忘了專案的git repository在哪裡，
+可以在這裡的clone按鈕按下去顯示，就可以貼給你的組員。
+![image](https://farm1.staticflickr.com/342/19665598850_8a20c418dc_o.png)
 
 ###測試Github for Mac的app存取VSO
 
@@ -20,9 +27,37 @@ title: "Visual Studio Online Git Client"
 
 1. CLient我測試過Github for Mac是可以用來存取Visual Studio Online  
 2. 設定如下，其實也沒設定什麼。其實只是把VSO的Git位置貼上去而已。重點還是在前面幾步。  
-  ![image](https://farm9.staticflickr.com/8647/16211857692_488e888909_o.png)
-3. 接下來你就放個檔案在本地目錄下，接下來commit/publish就跟喝水一樣自然  了。![image](https://farm8.staticflickr.com/7485/16025163078_3c310e56c1_o.png)
 
+先在本地新增一個目錄，這個目錄隨便你放在哪裡都可以，我是個人喜愛雙重備份，所以會放在dropbox的目錄下。但重點是Add。
+![image](https://farm1.staticflickr.com/481/19232014303_6db45acab6_o.png)
+
+按下Create＆Add Repository之後，會出現在Other群組（因為並非github原廠的repository，所以會被歸類在Other）
+這時你會發現空空如也（很正常）
+
+請到Github client的Repository選單選擇Repository Settings
+
+![image](https://farm4.staticflickr.com/3775/19665038418_c5265161cf_o.png)
+
+會跳出一個視窗，這時候就貼上我們共用的vsonline repo位置，請詢問visual studio online管理員。
+
+![image](https://farm1.staticflickr.com/273/19845655172_21b65071ba_o.png)
+
+按下確定這時應該會問我們帳號密碼
+![image](https://farm1.staticflickr.com/504/19666512759_5d663405ec_o.png)
+
+而我們並不是輸入微軟帳號的帳號密碼，而是用前面的環境設定處所設定的密碼（密碼分離機制，避免你全面資安失守）
+
+這時你會發現沒有任何事情發生，請按下右上角的publish，他會自動判斷，若本地缺檔案就會下載
+![image](https://farm1.staticflickr.com/424/19231081604_230cc6af52_o.png)
+ 
+ 
+ 
+3.接下來你就放個檔案在本地目錄下，接下來commit/publish就跟喝水一樣自然  了。請記得好習慣，輸入描述
+
+![image](https://farm8.staticflickr.com/7485/16025163078_3c310e56c1_o.png)
+
+4.也可以切換history頁籤來看歷史紀錄
+![image](https://farm1.staticflickr.com/375/19853532015_4e82f2ae67_o.png)
 
 P.S.後記：因為Github的Client預設會連線到github server，若輸入的時候不小心輸入錯了會被記錄在key chain造成後續登入失敗。這時請到您的KeyChain中刪除即可。
 ![image](https://farm8.staticflickr.com/7494/16252609796_bd8bb95191_o.png)
