--- a/_posts/myprojects/azure/2015-01-06-azure git.md
+++ b/_posts/myprojects/azure/2015-01-06-azure git.md
@@ -59,11 +59,31 @@ title: "Visual Studio Online Git Client"
 4.也可以切換history頁籤來看歷史紀錄
 ![image](https://farm1.staticflickr.com/375/19853532015_4e82f2ae67_o.png)
 
+
+### 疑難雜症
+#### 密碼修改
 P.S.後記：因為Github的Client預設會連線到github server，若輸入的時候不小心輸入錯了會被記錄在key chain造成後續登入失敗。這時請到您的KeyChain中刪除即可。
 ![image](https://farm8.staticflickr.com/7494/16252609796_bd8bb95191_o.png)
 
 或是搜尋一下可以看到你的keychain，如下，然後進行修改(會問你密碼)
 ![image](https://farm8.staticflickr.com/7645/16362363494_c5efb2a2b4_o.png)
+
+#### 一直是publish?
+第一次您設定完github 同步之後，一直是publish是怎樣？這時只要丟個檔案上去，然後commit並publish之後，接下來就會都是sync了。
+
+![image](https://farm1.staticflickr.com/371/19830718606_639066b1d5_o.png)
+
+#### 出現同步錯誤？
+我有一次是發生在直接在visual studio online的code功能中直接編輯刪除檔案，而本地還沒同步的時候我又做了更改，這時候會發生這種錯誤。
+![image](https://farm1.staticflickr.com/532/19234340334_de15e9b793_o.png)
+解決方法：
+確定您本地有安裝git指令，沒有就安裝一下（有問題請問我或google），安裝好後將os的環境變數path設定加上剛裝好的git目錄，以利切換到其他系統資料夾也可以被執行到。
+
+然後切換到您的source code 目錄，執行他講的指令（複製貼上就好）
+ex: git pull origin master && git push origin master
+若在mac上會跳出一個vim視窗，問您這樣的commit備註是不是ok，若確定且繼續就按下:q
+就會跳出來。完成後就解決了merge問題。
+所以盡可能減少從server上更動。不然就會有這些小問題。
 
 
 ### 過濾器
