--- a/_posts/myprojects/azure/2015-01-06-azure git.md
+++ b/_posts/myprojects/azure/2015-01-06-azure git.md
@@ -12,6 +12,10 @@ title: "Visual Studio Online Git Client"
 1.先到以下位置下載git程式，本篇不會以command line來進行  
 2.另外需要到你的Visual Studio Online專案的UserProfile去設定另外一組帳號和密碼，避免帳號透過github流出後讓您的微軟帳號陷於危險。  
 
+一開始需要先enable
+![image](https://farm1.staticflickr.com/523/19800951693_8f78c39445_o.png)
+
+enable之後就改一下你的替代密碼：
 ![image](https://farm1.staticflickr.com/338/19665371748_df70621339_o.png)
 
 3. 另外專案設定也要設定user的權限如下：  
