--- a/_posts/myprojects/azure/2015-01-06-azure git.md
+++ b/_posts/myprojects/azure/2015-01-06-azure git.md
@@ -77,6 +77,12 @@ P.S.後記：因為Github的Client預設會連線到github server，若輸入的
 
 ![image](https://farm1.staticflickr.com/371/19830718606_639066b1d5_o.png)
 
+
+#### 帳號密碼錯誤？
+2016年初測試從Mac上同步vso的程式，發現是可以的，且更方便。
+但要注意的是，因為Mac上會記錄keychain，所以一個MS帳號可以建立多個VSO帳號，而VSO可以建立多個Project沒錯，但是因為MAc的奇特現象，建議建立多個會比較簡單。建立VSO後，新版會直接問你要改密碼嗎？就直接改了。
+
+
 #### 出現同步錯誤？
 我有一次是發生在直接在visual studio online的code功能中直接編輯刪除檔案，而本地還沒同步的時候我又做了更改，這時候會發生這種錯誤。
 ![image](https://farm1.staticflickr.com/532/19234340334_de15e9b793_o.png)
