--- a/_posts/life/2016-04-28-mooncup.md
+++ b/_posts/life/2016-04-28-mooncup.md
@@ -6,6 +6,19 @@ tags : [mooncup,crowd funding]
 title: "群眾募資-月亮杯的故事"
 
 ---
+### 課程摘要
+ 
+群眾募資(Crowdfunding)，顧名思義就是向群眾 (Crowd) 募集資金 (funding)。提案者公開自己的募資計劃，並提供相應的回饋吸引群眾贊助計畫，以獲得足夠的計畫支持者與執行費用。是「最準確的市場調查」。
+募資官網：http://www.mooncup.com.tw/
+機會難得，請把握線上即席交流機會!
+ 
+### 講師介紹
+講者：曾穎凡
+著名女性用品推廣部落格版主，20歲創業在台灣推出第一個本土棉條品牌「凱娜」，二次創業-透過貝殼放大募資平台，在網路上推出「月亮杯」群眾募資，很快達到300萬的募資目標，目前已經有894萬的募資金額，有5,723人贊助。
+成功案例
+http://www.backer-founder.com/#!blank/cth7
+https://www.flyingv.cc/type/success
+
 ### 群眾募資
 
 群眾募資：有想法，消費者買不買單，買單就成立，不買單就fail
