--- a/_posts/life/2016-04-28-mooncup.md
+++ b/_posts/life/2016-04-28-mooncup.md
@@ -23,14 +23,13 @@ https://www.flyingv.cc/type/success
 
 群眾募資：有想法，消費者買不買單，買單就成立，不買單就fail
 
-FlyingV: 網站介面很醜，所以後來決定不上，太過陽剛
-群眾募資建議：可以找有顧問的，雖然有抽趴，但是有成比較重要。講者用貝殼放大。當然也有鐵粉支持也很重要。
+FlyingV: 網站介面很醜，所以講師後來決定不上，太過陽剛
+群眾募資建議：可以找有顧問的，雖然有抽趴，但是案子有成比較重要。講者用貝殼放大。當然成功要素中該講師長期培養的鐵粉支持也很重要。
 
 
 募資若找天使投資，銀行介紹，若產品是女性產品，不見得容易獲得金錢，或是跟不相關的人等進行談判，而群眾募資的好處是直接面對user如何幫助使用者解決問題。不需要解釋財報等等的，且可以跨國界進行。
 
-群眾募資的群眾不是股東，無法干預公司決策。
-股權型的群眾募資才是。
+群眾募資的群眾不是股東，無法干預公司決策。股權型的群眾募資才具有干預權利。
 
 
 克服困難就能持續使用，若能幫大部分的客戶解決問題，他就會幫你宣傳或是幫不會的人解決問題
