--- a/_posts/life/2016-04-29-fans.md
+++ b/_posts/life/2016-04-29-fans.md
@@ -1,9 +1,8 @@
-
 ---
 layout: post
 category : Life 
 tagline: "有效的社群經營"
-tags : [fans,social network,facebook]
+tags : [fans,social_network,facebook,growth hack]
 title: "有效的社群經營"
 
 ---
