--- a/_posts/life/2016-04-29-fans.md
+++ b/_posts/life/2016-04-29-fans.md
@@ -1,12 +1,11 @@
 ---
 layout: post
-category : Life 
+category : Life
 tagline: "有效的社群經營"
-tags : [fans,social_network,facebook,growth hack]
+tags : [fans,social_network,facebook,growth_hack]
 title: "有效的社群經營"
 
 ---
-
 ### 課程摘要
 有效的社群經營可以為公司帶來曝光的聲量與品牌的口碑效應進而影響評價，提高聲望，進而帶入導購與銷量。品牌輪廓與使用者情緒習習相關，社群經營可以直接了解及掌握與使用者的互動訊息。  
 FB搜尋：Social Press 社群誌
