--- a/_posts/life/2016-04-29-fans.md
+++ b/_posts/life/2016-04-29-fans.md
@@ -11,8 +11,8 @@ title: "有效的社群經營"
 FB搜尋：Social Press 社群誌
 
 ### 講師介紹
-講者：林靖洋
-<粉絲團經營達人>分享粉絲團經營及社群監控的大小事。
+講者：林靖洋 『粉絲團經營達人』
+分享粉絲團經營及社群監控的大小事。
 
 
 ### 講師社團：
