--- a/_posts/life/2016-04-29-fans.md
+++ b/_posts/life/2016-04-29-fans.md
@@ -11,9 +11,8 @@ title: "有效的社群經營"
 FB搜尋：Social Press 社群誌
 
 ### 講師介紹
-講者：林靖洋 『粉絲團經營達人』
+講者：林靖洋 『粉絲團經營達人』  
 分享粉絲團經營及社群監控的大小事。
-
 
 ### 講師社團：
 https://www.facebook.com/Socialpress.org/?fref=ts
@@ -21,8 +20,9 @@ https://www.facebook.com/Socialpress.org/?fref=ts
 
 ### 社群的組成
 
-粉絲團成立的來源，會有各種不同組成的來源。
-ex:網頁、論壇、bbs
+先來了解社群。可能會有不同組成的原因而組成社群。  
+社群可以是網頁、論壇、bbs、fb粉絲團
+
 ![image](https://farm2.staticflickr.com/1599/26611055682_d966966133_o.png)
 
 ![image](https://farm2.staticflickr.com/1453/26637896011_99576e7c3a_o.png)
@@ -35,49 +35,55 @@ ex:網頁、論壇、bbs
 
 ### 社群的功能
 
-在作fans團的時候要常常檢視是否有完成這些功能。
+在經營社群的時候要常常檢視是否有完成這些功能。
 ![image](https://farm2.staticflickr.com/1533/26100645103_f419a5ef38_o.png)
 
 
 ### 社群成效
-以往都要透過廣告去買行銷，但成效不一定。
-且合約已經談了就很難調整，且若是盲投，成效更難獲得。
-年齡、客群、客戶回應都收不到，難以衡量繼續投資廣告的契機。
+以往都要透過廣告去買行銷，但不一定會獲得成效。
+且合約已經談了就很難調整，這會算是盲投，成效難以歸責。
+年齡、客群、客戶回應都收不到，難以衡量是否繼續投放廣告（除非錢真的很多）。
 ![image](https://farm2.staticflickr.com/1506/26637979911_3d76c24a78_o.png)
 
 以往這些手法都不見得曝光量ok。報章雜誌流量大，但是不見得能夠回饋到產品面
-![image](https://farm2.staticflickr.com/1704/26704132935_55a71d9cf5_o.png)
+![image](https://farm2.staticflickr.com/1514/26101489294_778db32212_o.png)
+
 
 ![image](https://farm2.staticflickr.com/1689/26100206353_5ed6dd7059_o.png)
 
 現在行銷都是一切看數字量化，不然很難說什麼是成效。
 
-現在很多都是用臉書，是因為臉書的活躍度比較高。
+![image](https://farm2.staticflickr.com/1542/26680937846_d9bae76862_o.png)
+現在很多都是用臉書，是因為臉書的活躍度比較高。  
 臉書會先衝流量，然後求留下來的人，臉書相對成本便宜。
 
-臉書可以讓你知道客群的分布，進而進行調整。
-而也因為臉書有這些數據，就可以計算轉換率。進而知道要不要繼續投放。
-以上也就是近來公司常用fb的原因
-![image](https://farm2.staticflickr.com/1655/26098379904_d0586f2266_o.png)
+臉書可以讓你知道客群的分布，進而進行調整。  
+而也因為臉書有這些數據，就可以計算轉換率。進而知道要不要繼續投放。  
+以上也就是近來新創公司常用fb的原因  
+
+![image](https://farm2.staticflickr.com/1499/26434836800_0819abaa33_o.png)
 
 
-因為會有數據分析，所以反應可以很快。
-廣告的走期也可以透過每小時的操作。
+因為會有數據分析，所以反應可以很快。  
+廣告的走期也可以透過每小時的操作。  
 FB進入的門檻比較低。一天可能花一點錢就可以投放廣告。
 
-![image](https://farm2.staticflickr.com/1653/26677692036_f321427210_o.png)
+![image](https://farm2.staticflickr.com/1642/26434853290_e1923638f5_o.png)
 
-傳統的打法：透過廣宣，強調多好多好，但若客戶覺得不好，就形象下降了
+傳統的打法：自吹自擂，強調多好多好，但若客戶覺得不好，就形象下降了  
 
 ![image](https://farm2.staticflickr.com/1684/26638197991_ffb1c3522e_o.png)
-paymedia
+
+Paid Media  
+透過錢買來的形象，如付費搜尋、贊助、置入廣告等
 ![image](https://farm2.staticflickr.com/1650/26638218501_c0a3e941cc_o.png)
-earn media
-透過fans而擴散
+
+Earned media  
+透過fans而擴散形象
 ![image](https://farm2.staticflickr.com/1454/26677757336_69a9ddb13e_o.png)
 
-own media
-因為可控制度高，可能都是社群主的控制的人，就可以散撥，塑造形象。
+Owned media
+因為可控制度高，可以是品牌主可以操控的範圍(人、環境)，就可以散撥，塑造形象。  
 ![image](https://farm2.staticflickr.com/1703/26677768186_2f72dbcded_o.png)
 
 
@@ -91,10 +97,10 @@ own media
 
 ![image](https://farm2.staticflickr.com/1614/26611535472_4416f929a8_o.png)
 
-要怎麼做呢？
-1.觀察對手，知道自己可以po什麼文章。
-2.發想內容：若對手都是用圖片，那你可以用影片、插畫...
-3.找到自己：透過fans客群，就可以拉開距離。
+要怎麼做呢？  
+1.觀察對手，知道自己可以po什麼文章。  
+2.發想內容：若對手都是用圖片，那你可以用影片、插畫...  
+3.找到自己：透過fans客群，就可以拉開距離。  
 	ex: 主講者在運動fans團用影片突圍，後來又進化成和大聯盟簽約作更特意的內容。
 	
 4.成長：
@@ -102,6 +108,8 @@ own media
 要成長要繼續，不要停下來。所以要分工，作不同的事情。
 
 ![image](https://farm2.staticflickr.com/1605/26638337921_275ab22607_o.png)
+
+### 如何製造出優質的內容  
 不要盜圖、格式統一，讓粉絲覺得有在用心作。
 ![image](https://farm2.staticflickr.com/1450/26677918886_3f288c6ea0_o.png)
 要有好的態度。
@@ -110,11 +118,12 @@ own media
 透過有特色，才會被分享。
 ![image](https://farm2.staticflickr.com/1671/26100597833_4ec2540de6_o.png)
 
-若都是聊自己的東西，或是產品照就比較沒有feel。傳達的訊息不要都只是產品要上市讓粉絲團覺得快掏錢來。
+若都是聊自己的東西，或是產品照就比較沒有feel。  
+傳達的訊息不要都只是產品要上市讓粉絲團覺得只是想要他們掏錢。
 ![image](https://farm2.staticflickr.com/1564/26638471461_cf74d282ef_o.png)
 
 
-容易被分享的四個價值：
+### 容易被分享的四個價值
 
 ![image](https://farm2.staticflickr.com/1569/26704683855_f822431bd0_o.png)
 
@@ -126,17 +135,17 @@ own media
 ex:花30塊分享轉載3000次，觸擊幾萬人
 ![image](https://farm2.staticflickr.com/1647/26638690921_c409ea357a_o.png)
 
-若沒有梗了，也可以靠勵志、愛情等正面的文章。這些有可能被分享最多，排名第一。第二名是實用類的。另外結合愛情與星座的大家也很愛，因為大家喜歡對號入座。
+若沒有梗了，也可以靠勵志、愛情等正面的文章。這些有可能被分享最多，排名第一。第二名是實用類的。另外結合愛情與星座的大家也很愛，因為大家喜歡對號入座。  
 找靈感可以到：http://www.brainyquote.com/  一些勵志小語。因為是英文，所以可以自行翻譯。
 
 ![image](https://farm2.staticflickr.com/1611/26432083450_07d380a95f_o.png)
 
 這些力求簡單好懂。沒有負擔。做這些教學文，不要增加客戶負擔，從生活就可以完成，盡量無需要購物。透過這些步驟就可以重新檢視文章分享的數量。
 
-![image](https://farm2.staticflickr.com/1453/26611964082_fefb841050_o.png)
+![image](https://farm2.staticflickr.com/1631/26101876064_b152baed75_o.png)
 
 有時需要借力使力，觀察時事，所以在粉絲團po相關的文章，在把產品帶出來。
-![image](https://farm2.staticflickr.com/1633/26432162670_7d05ce9445_o.png)
+![image](https://farm2.staticflickr.com/1495/26435138530_9524533974_o.png)
 
 
 發文的時候若真的想不到，可以朝向以下方向。若大家都有特色就是沒特色。
@@ -181,10 +190,10 @@ ex:花贊助60塊，po個有編號的文，一晚就有2000次。
 緊繃情緒：雞蛋裡挑骨頭，無限放大。不管是健康或利益，要跟受眾有關。ex:公園裡小孩玩的沙子...
 引導動作：認同請分享、喜歡請購買，標註朋友等。雖然看似奇怪沒質感，但若沒有做就沒有了。
 
-![image](https://farm2.staticflickr.com/1625/26704949575_6139c09ceb_o.png)
+![image](https://farm2.staticflickr.com/1612/26103840793_e1516500c1_o.png)
 
 數字型文案
-樣板：數字＋權威人士＋不可不知  ＝聳動
+樣板：數字＋權威人士＋不可不知＝聳動
 ![image](https://farm2.staticflickr.com/1657/26705020785_a61536b1e6_o.png)
 
 
@@ -224,7 +233,7 @@ ex:噴美白劑，也是一種晒。
 檢查文案：檢查口氣
 檢查時間：受眾哪些時間瀏覽手機，不要在不對的時間請求互動...
 檢查竟品：是否對手也在狂灑錢，競價機制，可以先關閉或是不要硬碰硬。可能靠內容避開。
-![image](https://farm2.staticflickr.com/1631/26099384114_19c6c7ab03_o.png)
+![image](https://farm2.staticflickr.com/1627/26103868203_810bcf0925_o.png)
 
 粉絲頁不是產品目錄頁，明確主題。
 
@@ -238,7 +247,10 @@ ex:噴美白劑，也是一種晒。
  unsplash.com有一些免費圖
 ![image](https://farm2.staticflickr.com/1465/26099429944_318912b541_o.png)
 
-不要躲在螢幕後，要po一些小邊自己的故事，露臉有人位
+
+![image](https://farm2.staticflickr.com/1630/26614927452_a96e32f9a2_o.png)
+
+小編不要躲在螢幕後，要po一些小編自己的故事，有時露臉會有意外的人氣與人情味。
 
 ![image](https://farm2.staticflickr.com/1603/26639198631_31d97d4d74_o.png)
 
