--- a/_posts/life/2016-04-29-fans.md
+++ b/_posts/life/2016-04-29-fans.md
@@ -4,6 +4,8 @@ category : Life
 tagline: "有效的社群經營"
 tags : [fans,social_network,facebook,growth_hack]
 title: "有效的社群經營"
+imagefeature: https://farm8.staticflickr.com/7781/26758380546_c1969b404f_o.jpg
+covereffect: slice
 
 ---
 ### 課程摘要
